cambios en toda la estructura